# gimpact

./: .gitignore  .pypirc  LICENSE  MANIFEST.in  README.md  aabb.html  aabb_set.html  collision.html  demo.py  genindex.html  gimpact.pxd  gimpact.pyx  index.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tests.py  trimesh.html
.github/workflows/: build.yml
GIMPACT/include/: simplify.h
GIMPACT/include/GIMPACT/: gim_math.h  gim_trimesh.h  gimpact.h
GIMPACT/src/: gim_memory.cpp  gim_trimesh.cpp  gim_trimesh_capsule_collision.cpp  gim_trimesh_sphere_collision.cpp  gim_trimesh_trimesh_collision.cpp  gimpact.cpp
docs/: aabb.rst  aabb_set.rst  collision.rst  conf.py  index.rst  trimesh.rst
tests/: tests.py
