[project]
name = "gimpact"
version = "1.0.2"
description = "An unofficial python extension for the GImpact collision library"
authors = [
    {name = "Stephen Nneji", email="steve.nneji@gmail.com"}
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.6"

keywords = ["GImpact", "Trimesh", "Collision detection", "Cython"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Cython"
]

dependencies = [
    "numpy >= 1.18.5",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools", "wheel", "numpy>=1.18.5", "Cython>=0.29.21"]
build-backend = "setuptools.build_meta"
